# route-master

./: .clang-format  .clang-tidy  .clangd  .codespellrc  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  reinstall-cmake.sh
.github/workflows/: cmake-single-platform.yml
assets/maps/: demo.tmx  demo_editor.tmx  gb.tmx  gbtileset.tsx  stops1.json
assets/maps/tilesets/: RMW1TS.tsx  gbtileset.tsx  tilemap_packed.tsx  tilemap_packed2.tsx  tilemap_packed_editor.tsx
assets/screens/: basic_screen.txt  bus_maintenance.txt  bus_payment.txt  bus_select.txt  dev_widget.txt  inventory.txt  main_menu.txt  payroll.txt  route_edit.txt  route_select.txt  settings_screen.txt  store.txt
assets/tgui/: Kenney.txt
assets/tgui/kenney/: License.txt
cmake/: dev-mode.cmake  install-rules.cmake  spell.cmake  symlink-dirs.cmake  third-party.cmake  variables.cmake
cmake/modules/: FindTMXLITE.cmake
include/config/: game.hpp  global.hpp
include/engine/: input_manager.hpp  state_machine.hpp  tmx_core.hpp
include/platform/: iplatform.hpp  platform.hpp
include/platform/linux/: linux_platform.hpp
include/platform/macos/: macos_platform.hpp
include/platform/win32/: windows_platform.hpp
include/player/: Achievement.hpp  AchievementManager.hpp  AchievementMessage.hpp  Achievements.hpp  Item.hpp  Message.hpp  Player.hpp  Store.hpp  item.hpp  player.hpp  store.hpp
include/simulation/: Bus.hpp  BusStop.hpp  City.hpp  Employee.hpp  Passenger.hpp  Route.hpp  SimulationInfo.hpp  Street.hpp  TrafficLight.hpp  VisualElement.hpp  bus.hpp  bus_stop.hpp  city.hpp  employee.hpp  passenger.hpp  street.hpp  traffic_light.hpp  visual_element.hpp
include/states/: achievements_state.hpp  bus_improvements_state.hpp  bus_maintenance_state.hpp  bus_select_state.hpp  inventory_state.hpp  main_menu_state.hpp  management_state.hpp  map_viewer_state.hpp  messages_state.hpp  payroll_state.hpp  route_edit_state.hpp  route_list_state.hpp  route_select.hpp  settings_state.hpp  simulation_state.hpp  state.hpp  stats_state.hpp  store_state.hpp
include/utils/: JSON.hpp  calc_view.hpp  street_factory.hpp  view_dragger.hpp
res/windows/: app.manifest
source/: CMakeLists.txt  main.cpp
source/config/: CMakeLists.txt  config.cpp  game.cpp
source/config/include/: config.hpp.in  game.hpp  global.hpp
source/config/src/: config.cpp  game.cpp
source/engine/: CMakeLists.txt  asset_manager.cpp  input_manager.cpp  state_machine.cpp  tmx_core.cpp
source/engine/include/: asset_manager.hpp  input_manager.hpp  state_machine.hpp
source/engine/src/: asset_manager.cpp  input_manager.cpp  state_machine.cpp
source/platform/: CMakeLists.txt
source/platform/include/: iplatform.hpp  platform.hpp
source/platform/include/linux/: linux_platform.hpp
source/platform/include/macos/: macos_platform.hpp
source/platform/include/win32/: windows_platform.hpp
source/platform/linux/: linux_platform.cpp
source/platform/macos/: macos_platform.cpp
source/platform/src/linux/: linux_platform.cpp
source/platform/src/macos/: macos_platform.cpp
source/platform/src/win32/: resource.rc  windows_platform.cpp
source/platform/win32/: resource.rc  windows_platform.cpp
source/player/: Achievement.cpp  AchievementManager.cpp  AchievementMessage.cpp  Achievements.cpp  Item.cpp  Message.cpp  Player.cpp  Store.cpp  item.cpp  player.cpp  store.cpp
source/simulation/: Bus.cpp  BusStop.cpp  City.cpp  Employee.cpp  Passenger.cpp  Route.cpp  SimulationInfo.cpp  Street.cpp  TrafficLight.cpp  VisualElement.cpp  bus.cpp  bus_stop.cpp  city.cpp  employee.cpp  passenger.cpp  street.cpp  traffic_light.cpp  visual_element.cpp
source/states/: CMakeLists.txt  achievements_state.cpp  bus_improvements_state.cpp  bus_maintenance_state.cpp  bus_select_state.cpp  inventory_state.cpp  main_menu_state.cpp  management_state.cpp  map_viewer_state.cpp  messages_state.cpp  payroll_state.cpp  route_edit_state.cpp  route_list_state.cpp  route_select.cpp  settings_state.cpp  simulation_state.cpp  stats_state.cpp  store_state.cpp
source/states/include/: main_menu_state.hpp  state.hpp
source/states/src/: main_menu_state.cpp
source/utilities/: CMakeLists.txt
source/utilities/include/: filesystem.hpp
source/utils/: JSON.cpp  calc_view.cpp  street_factory.cpp  view_dragger.cpp
tests/: CMakeLists.txt
tests/src/: json_tests.cpp  player_tests.cpp  route-master_test.cpp  route_master_test.cpp  simulation_tests.cpp
